1.1
  - Do not write blank xlsx strings for NA and "" character values

1.0
  - Save R 'Date' types as proper datetime strings
  - Update vendored libxlswriter to 0.7.6

0.2
  - Add support for lists in write_xlsx() to create xlsx with multiple sheets
  - Automatically coerce columns of type 'Date' and 'hms' to strings

0.1
  - Initial CRAN release with clippy