@@ -1,7 +1,7 @@
 Package: writexl
 Type: Package
 Title: Export Data Frames to Excel 'xlsx' Format
-Version: 1.0
+Version: 1.1
 Authors@R: c(
     person("Jeroen", "Ooms", ,"jeroen@berkeley.edu", role = c("aut", "cre"),
       comment = c(ORCID = "0000-0002-4035-0289")),
@@ -19,5 +19,6 @@ Suggests:
     spelling,
     readxl,
     nycflights13,
-    testthat
+    testthat,
+    bit64
 Language: en-US
